# frps-controller-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-dev.yaml
charts/frps-controller/: Chart.yaml  test.yaml  values.yaml
charts/frps-controller/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml  rbac.yaml  servicemonitor.yaml  services.yaml
crds/: endpointreferences.milkshakes.cloud.yaml  frpclients.milkshakes.cloud.yaml
src/: controller.rs  crdgen.rs  endpoints.rs  frpclients.rs  lib.rs  main.rs
