[package]
name = "frps-controller-rs"
version = "0.1.0"
edition = "2021"
default-run = "controller"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.21.1", features = ["latest"] }
serde = { version = "1.0.196", features = ["derive"] }
schemars = "0.8.16"
serde_json = "1.0.113"
thiserror = "1.0.57"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4.5.1"
anyhow = "1.0.79"
serde_yaml = "0.9.31"

[dependencies.kube]
version = "0.88.1"
features = ["runtime", "client", "derive"]